# dolfin-adjoint

./: .flake8  CODE_OF_CONDUCT.md  ChangeLog.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy.yml  docker.yml  docs.yml  pypi.yml  test_dolfin_adjoint.yml
docker/: Dockerfile  README.md
docker/fenics/: Dockerfile  README.md
docker/fenics/dev/: Dockerfile  README.md
docs/: Makefile  requirements.txt
docs/source/: conf.py
docs/source/_static/: tutorial4.py
docs/source/about/: difference.rst  index.rst
docs/source/citing/: index.rst
docs/source/documentation/: pyadjoint_api.rst  pyadjoint_docs.rst
docs/source/download/: index.rst
docs/source/support/: index.rst
dolfin_adjoint_common/: compat.py  ufl_constraints.py
dolfin_adjoint_common/blocks/: assembly.py  dirichlet_bc.py  function.py  solving.py
examples/klein/: klein.py
examples/time-dependent-wave/: time-dependent-wave.py
fenics_adjoint/: __init__.py  assembly.py  interpolation.py  krylov_solver.py  lu_solver.py  newton_solver.py  petsc_krylov_solver.py  projection.py  system_assembly.py  ufl_constraints.py
fenics_adjoint/blocks/: function.py  function_assigner.py  krylov_solver.py  lu_solver.py  petsc_krylov_solver.py  solving.py  variational_solver.py
fenics_adjoint/types/: __init__.py  as_backend_type.py  constant.py  dirichletbc.py  expression.py  function.py  function_space.py  genericvector.py
pyadjoint/: __init__.py
src/dolfin_adjoint/: __init__.py
src/fenics_adjoint/: __init__.py  krylov_solver.py  lu_solver.py  petsc_krylov_solver.py  refine.py  shapead_transformations.py  solving.py  system_assembly.py  utils.py  variational_solver.py
src/fenics_adjoint/blocks/: __init__.py  assembly.py  constant.py  dirichlet_bc.py  function.py  function_assigner.py  krylov_solver.py  lu_solver.py  petsc_krylov_solver.py  projection.py  solving.py  variational_solver.py
src/fenics_adjoint/types/: as_backend_type.py  constant.py  dirichletbc.py  expression.py  function.py  function_assigner.py  function_space.py  genericmatrix.py  io.py  mesh.py
tests/fenics_adjoint/: test_adjoint_state_cb.py  test_linear_solver.py  test_optimization_rol.py  test_projection.py
tests/migration/assembled_action/: assembled_action.py
tests/migration/burgers_newton_time_functional/: burgers_newton_time_functional.py
tests/migration/burgers_oo/: burgers_oo.py
tests/migration/burgers_picard/: burgers_picard.py
tests/migration/cahn_hilliard/: cahn_hilliard.py  paper_adjoint.py
tests/migration/checkpoint_burgers/: checkpoint_burgers.py
tests/migration/checkpoint_burgers_newton/: checkpoint_burgers_newton.py
tests/migration/checkpoint_online/: checkpoint_online.py
tests/migration/checkpoint_stokes/: checkpoint_stokes.py
tests/migration/compute_tlm_list_parameter/: compute_tlm_list_parameter.py
tests/migration/curl-curl/: curl-curl.py
tests/migration/fg_constant/: fg_constant.py
tests/migration/fg_constants/: fg_constants.py
tests/migration/function_assign_lincom/: function_assign_lincom.py
tests/migration/function_assigner/: function_assigner.py
tests/migration/function_assigner_givsub/: function_assigner_givsub.py
tests/migration/functional_operations/: functional_operations.py
tests/migration/heat/: heat.py
tests/migration/hessian_identity/: hessian_identity.py
tests/migration/hessian_identity_list/: hessian_identity_list.py
tests/migration/hessian_identity_list2/: hessian_identity_list2.py
tests/migration/interpolate/: interpolate.py
tests/migration/list_parameter/: list_parameter.py
tests/migration/localsolver/: localsolver.py
tests/migration/localsolver_factorize/: localsolver_factorize.py
tests/migration/lvs/: lvs.py
tests/migration/matrix_free_heat/: matrix_free_heat.py
tests/migration/matrix_summation/: matrix_summation.py
tests/migration/mpec/: timing.py
tests/migration/multimesh_poisson/: mesh_poisson.py  multimesh_poisson.py
tests/migration/newton_constant/: newton_constant.py
(+34 files in other folders)
