[metadata]
name = dolfin-adjoint
description='High-level automatic differentiation library for FEniCS.',
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dolfin-adjoint/dolfin-adjoint
author='Sebastian Kenji Mitusch',
author_email='sebastkm@math.uio.no',
license = LGPL-3.0
license_files = LICENSE

[flake8]
exclude = .git,__pycache__,docs/,examples/,tests/,scripts/
max-line-length = 119
ignore=E731,W503,F405